--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,12 @@
       <artifactId>protobuf-java</artifactId>
       <version>3.16.0</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.freemarker</groupId>
+      <artifactId>freemarker</artifactId>
+      <version>2.3.31</version>
+    </dependency>
   </dependencies>
 
 </project>
